# IoT-Security

./: .gitignore  CMakeLists.txt  prj.conf
DisplaySensor/: CMakeLists.txt  prj.conf
DisplaySensor/boards/: nrf9160dk_nrf9160_ns.overlay
DisplaySensor/include/: display_custom.h  gpio_adc.h  hbrslogo_bw.h  lvgl_utils.h
DisplaySensor/src/: display_custom.c  gpio_adc.c  hbrslogo_bw.c  i2c_scanner.h  lvgl_utils.c  main.c
SSD1306/: CMakeLists.txt  prj.conf
SSD1306/boards/: bkp.txt
SSD1306/include/: hbrslogo.h  hbrslogo_bw.c
SSD1306/lvgl/: .ninja_log  CMakeCache.txt  SSD1306_sysbuild_cache.txt.tmp  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake  domains.yaml  merged.hex  sysbuild_modules.txt  zephyr_modules.txt  zephyr_settings.txt
SSD1306/src/: main.c
SSD1315/boards/: nrf9160dk_nrf9160_ns.overlay
SSD1315/include/: draw.h
SSD1315/src/: main.c
drivers/ssd1315/: ssd1315.c
i2c_scanner/include/: i2c_scanner.h
i2c_scanner/src/: i2c_scanner.c
img/: hbrslogo.xcf  hbrslogo32  hbrslogo4.c  hbrslogo42
projects/VL53L0X/: CMakeLists.txt  prj.conf
projects/VL53L0X/boards/: nrf9160dk_nrf9160_ns.overlay
projects/VL53L0X/drivers/VL53L0X/: VL53L0X.c
projects/VL53L0X/include/VL53L0X/: VL53L0X.h
projects/VL53L0X/src/: main.c
src/: main.c
t2/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  sysbuild_modules.txt  zephyr_modules.txt  zephyr_settings.txt
test/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake
(+591 files in other folders)
